--- a/loungesettings.conf
+++ b/loungesettings.conf
@@ -2,6 +2,7 @@
     'devices': {
         'allthelights': ['energeniea_', 'energenieb_'],
         'thelights': ['energeniea_'],
+	'thetv': 'infraloungeTV'
     },
     'greeting': '/home/pi/r2d2.ogg'
 }
