new light, sitting room host updated

--- a/loungesettings.conf
+++ b/loungesettings.conf
@@ -1,6 +1,6 @@
 {
     'devices': {
-        'allthelights': ['energeniea_', 'energenieb_'],
+        'allthelights': ['energeniea_', 'energenieb_', 'energeniee_'],
         'thelights': ['energeniea_'],
 	'thetv': 'infraloungeTV'
     },
