--- a/settings.conf
+++ b/settings.conf
@@ -1,4 +1,5 @@
 {
+    'device_id': 'ass-pi-bedroom-bedroom-pi-fbe77x',
     'devices': {
         'allthelights': ['x10a_', 'x10b_'],
         'thelights': ['x10a_'],
