--- a/devices.conf
+++ b/devices.conf
@@ -43,6 +43,12 @@
     'theloungechristmastree': 'c_',
     'theloungechristmaslights': 'c_',
     'loungechristmaslights': 'c_',
+    'thecattoy': 'c_',
+    'cattoy': 'c_',
+    'thecouchtoy': 'c_',
+    'couchtoy': 'c_',
+    'thetoy': 'c_',
+    'toy': 'c_',
     'sittingroomchristmastree': 'd_',
     'thesittingroomchristmastree': 'd_',
     'sittingroomchristmaslights': 'd_',
