looking up device if it's not send by plug

--- a/devices.conf
+++ b/devices.conf
@@ -1,88 +1,88 @@
 {
-    'thelights': ['energenieb_', 'energeniea_','energeniee_'],
-    'allthelights': ['energenieb_', 'energeniea_','energeniee_'],
-    'tv': 'infrabedroomTV',
-    'thetv': 'infrabedroomTV',
-    'everything': ['energenieall_','x10a_', 'x10b_', 'x10c_', 'x10d_', 'all_'],
-    'thelamps': 'energenieb_',
-    'thelamp': 'energenieb_',
-    'thealarms': 'energenieb_',
-    'thealarm': 'energenieb_',
-    'alarm': 'energenieb_',
-    'alarm': 'energenieb_',
-    'myalarm': 'energenieb_',
-    'myalarms': 'energenieb_',
-    'thecontroller': 'energenied_',
-    'thecontrollers': 'energenied_',
-    'thecontrol':'energenied_',
-    'thecontrols':'energenied_',
-    'theconsoles': 'energeniec_',
-    'theconsole': 'energeniec_',
-    'theceiling': 'energeniea_',
-    'theturntablelight':'energeniee_',
-    'turntablelight': 'energeniee_',
-    'themusiclight': 'energeniee_',
-    'musiclight': 'energeniee_',
-    'bedroomlights': 'x10a_',
-    'thebedroomlights': 'x10a_',
-    'bedroomlight': 'x10a_',
-    'thebedroomlight': 'x10a_',
-    'bedlight': 'x10b_',
-    'thebedlight': 'x10b_',
-    'bedlights': 'x10b_',
-    'thebedlights': 'x10b_',
-    'thekitchenlights': 'a_',
-    'thekitchenlight': 'a_',
-    'kitchenlights': 'a_',
-    'theledstrip': 'a_',
-    'sittingroomlamp': 'b_',
-    'thesittingroomlamp': 'b_',
-    'sittingroomlamps': 'b_',
-    'thesittingroomlamps': 'b_',
-    'loungechristmastree': 'c_',
-    'theloungechristmastree': 'c_',
-    'theloungechristmaslights': 'c_',
-    'loungechristmaslights': 'c_',
-    'thecattoy': 'c_',
-    'cattoy': 'c_',
-    'thecouchtoy': 'c_',
-    'couchtoy': 'c_',
-    'thetoy': 'c_',
-    'toy': 'c_',
-    'sittingroomchristmastree': 'd_',
-    'thesittingroomchristmastree': 'd_',
-    'sittingroomchristmaslights': 'd_',
-    'thesittingroomchristmaslights': 'd_',
-    'loungelights': 'energenief_',
-    'theloungelights': 'energenief_',
-    'outsidelights': 'energenieg_',
-    'theoutsidelights': 'energenieg_',
-    'halllights': 'x10c_',
-    'thehalllights': 'x10c_',
-    'thewaterfall': 'waterfall_',
-    'waterfall': 'waterfall_',
-    'soundbar': 'infrasoundbar',
-    'thesoundbar': 'infrasoundbar',
-    'aircon': 'infraaircon',
-    'theaircon': 'infraaircon',
-    'theicon': 'infraaircon',
-    'icon': 'infraaircon',
-    'theacon': 'infraaircon',
-    'acon': 'infraaircon',
-    'iPhone': 'infraaircon',
-    'theloungetv': 'infraloungeTV',
-    'loungetv': 'infraloungeTV',
-    'sittingroomtv': 'infrasittingRoomTV',
-    'thesittingroomtv': 'infrasittingRoomTV',
-    'theblurayplayer': 'infrabluray',
-    'theblu-rayplayer': 'infrabluray',
-    'blu-rayplayer': 'infrabluray',
-    'theblu-ray': 'infrabluray',
-    'blu-ray': 'infrabluray',
-    'blurayplayer': 'infrabluray',
-    'bedroomtv': 'infrabedroomTV',
-    'thebedroomtv': 'infrabedroomTV',
-    'thecolorlight': 'infracolorlight',
-    'colorlight': 'infracolorlight',
-    'color': 'infracolorlight'
+    "thelights": ["energenieb_", "energeniea_","energeniee_"],
+    "allthelights": ["energenieb_", "energeniea_","energeniee_"],
+    "tv": "infrabedroomTV",
+    "thetv": "infrabedroomTV",
+    "everything": ["energenieall_","x10a_", "x10b_", "x10c_", "x10d_", "all_"],
+    "thelamps": "energenieb_",
+    "thelamp": "energenieb_",
+    "thealarms": "energenieb_",
+    "thealarm": "energenieb_",
+    "alarm": "energenieb_",
+    "alarm": "energenieb_",
+    "myalarm": "energenieb_",
+    "myalarms": "energenieb_",
+    "thecontroller": "energenied_",
+    "thecontrollers": "energenied_",
+    "thecontrol":"energenied_",
+    "thecontrols":"energenied_",
+    "theconsoles": "energeniec_",
+    "theconsole": "energeniec_",
+    "theceiling": "energeniea_",
+    "theturntablelight":"energeniee_",
+    "turntablelight": "energeniee_",
+    "themusiclight": "energeniee_",
+    "musiclight": "energeniee_",
+    "bedroomlights": "x10a_",
+    "thebedroomlights": "x10a_",
+    "bedroomlight": "x10a_",
+    "thebedroomlight": "x10a_",
+    "bedlight": "x10b_",
+    "thebedlight": "x10b_",
+    "bedlights": "x10b_",
+    "thebedlights": "x10b_",
+    "thekitchenlights": "a_",
+    "thekitchenlight": "a_",
+    "kitchenlights": "a_",
+    "theledstrip": "a_",
+    "sittingroomlamp": "b_",
+    "thesittingroomlamp": "b_",
+    "sittingroomlamps": "b_",
+    "thesittingroomlamps": "b_",
+    "loungechristmastree": "c_",
+    "theloungechristmastree": "c_",
+    "theloungechristmaslights": "c_",
+    "loungechristmaslights": "c_",
+    "thecattoy": "c_",
+    "cattoy": "c_",
+    "thecouchtoy": "c_",
+    "couchtoy": "c_",
+    "thetoy": "c_",
+    "toy": "c_",
+    "sittingroomchristmastree": "d_",
+    "thesittingroomchristmastree": "d_",
+    "sittingroomchristmaslights": "d_",
+    "thesittingroomchristmaslights": "d_",
+    "loungelights": "energenief_",
+    "theloungelights": "energenief_",
+    "outsidelights": "energenieg_",
+    "theoutsidelights": "energenieg_",
+    "halllights": "x10c_",
+    "thehalllights": "x10c_",
+    "thewaterfall": "waterfall_",
+    "waterfall": "waterfall_",
+    "soundbar": "infrasoundbar",
+    "thesoundbar": "infrasoundbar",
+    "aircon": "infraaircon",
+    "theaircon": "infraaircon",
+    "theicon": "infraaircon",
+    "icon": "infraaircon",
+    "theacon": "infraaircon",
+    "acon": "infraaircon",
+    "iPhone": "infraaircon",
+    "theloungetv": "infraloungeTV",
+    "loungetv": "infraloungeTV",
+    "sittingroomtv": "infrasittingRoomTV",
+    "thesittingroomtv": "infrasittingRoomTV",
+    "theblurayplayer": "infrabluray",
+    "theblu-rayplayer": "infrabluray",
+    "blu-rayplayer": "infrabluray",
+    "theblu-ray": "infrabluray",
+    "blu-ray": "infrabluray",
+    "blurayplayer": "infrabluray",
+    "bedroomtv": "infrabedroomTV",
+    "thebedroomtv": "infrabedroomTV",
+    "thecolorlight": "infracolorlight",
+    "colorlight": "infracolorlight",
+    "color": "infracolorlight"
 }
