--- a/devices.conf
+++ b/devices.conf
@@ -84,5 +84,7 @@
     "thebedroomtv": "infrabedroomTV",
     "thecolorlight": "infracolorlight",
     "colorlight": "infracolorlight",
-    "color": "infracolorlight"
+    "color": "infracolorlight",
+    "fridge": "e_",
+    "thefridge": "e_",
 }
