new timer supporting both ir and 433, site server side working

--- a/devices.conf
+++ b/devices.conf
@@ -43,6 +43,10 @@
     "theloungechristmastree": "c_",
     "theloungechristmaslights": "c_",
     "loungechristmaslights": "c_",
+    "thephone": "c_",
+    "phone": "c_",
+    "thetorch": "c_",
+    "thevoice": "c_",
     "thecattoy": "c_",
     "cattoy": "c_",
     "thecouchtoy": "c_",
