--- a/newdevices.conf
+++ b/newdevices.conf
@@ -1,5 +1,5 @@
 [
-    {"name": "Bedroom TV", "ids": ["infrabedroomTV"], "type":"infrared", "location": "Bedroom", "functions": ["On", "Off", "Source", "Mute", "Volume UP", "Volume Down", "Tools", "Up", "Left", "Right", "Down", "Enter", "Return", "Exit", "HDMI"], "aliases": ["thebedroomtv","bedroomtv"]},
+    {"name": "Bedroom TV", "ids": ["bedroomTV"], "type":"infrared", "location": "Bedroom", "functions": ["On", "Off", "Source", "Mute", "Volume UP", "Volume Down", "Tools", "Up", "Left", "Right", "Down", "Enter", "Return", "Exit", "HDMI"], "aliases": ["thebedroomtv","bedroomtv"]},
     {"name": "Lounge Lamps", "ids": ["energenieb_"], "type":"energenie", "location": "Lounge", "functions": ["On", "Off"], "aliases": ["thelamps","thelamp","thealarms","thealarm","alarm","alarm","myalarm","myalarms"]},
     {"name": "Controllers", "ids": ["energenied_"], "type":"energenie", "location": "Lounge", "functions": ["On", "Off"], "aliases": ["thecontroller","thecontrollers","thecontrol","thecontrols"]},
     {"name": "Consoles", "ids": ["energeniec_"], "type":"energenie", "location": "Lounge", "functions": ["On", "Off"], "aliases":["theconsoles","theconsole"]},
@@ -10,11 +10,11 @@
     {"name": "Sitting Room Lamps", "ids": ["b_"], "type":"generic", "location": "Sitting Room", "functions": ["On", "Off"], "aliases":["sittingroomlamp","thesittingroomlamp","sittingroomlamps","thesittingroomlamps"]},
     {"name": "Cat Toy", "ids": ["c_"], "type":"generic", "location": "Hall", "functions": ["On", "Off"], "aliases":["thecattoy","cattoy","thecouchtoy","couchtoy","thetoy","toy"]},
     {"name": "Waterfall", "ids": ["waterfall_"], "type":"generic", "location": "Garden", "functions": ["On", "Off"], "aliases":["thewaterfall","waterfall"]},
-    {"name": "Soundbar", "ids": ["infrasoundbar"], "type":"infrared", "location": "Bedroom", "functions": ["On", "Off", "Bluetooth", "Line", "Aux"], "aliases":["soundbar","thesoundbar"]},
-    {"name": "Air Con", "ids": ["infraaircon"], "type":"infrared", "location": "Bedroom", "functions": ["On", "Off", "Up", "Sleep", "Evaporate", "Rotate", "Ion"], "aliases":["aircon","theaircon","theicon","icon","theacon","acon","iPhone"]},
-    {"name": "Lounge TV", "ids": ["infraloungeTV"], "type":"infrared", "location": "Lounge", "functions": ["On", "Off", "Source", "Mute", "Volume UP", "Volume Down", "Up", "Left", "Right", "Down", "Enter", "Home", "Back", "Play", "Pause", "Forward", "Reverse", "Stop"], "aliases":["theloungetv","loungetv"]},
-    {"name": "Sitting Room TV", "ids": ["infrasittingRoomTV"], "type":"infrared", "location": "Sitting Room", "functions": ["On", "Off",  "Source", "Mute", "Volume UP", "Volume Down", "Up", "Left", "Right", "Down", "Enter", "Back"], "aliases":["sittingroomtv","thesittingroomtv"]},
-    {"name": "Blu-Ray Player", "ids": ["infrabluray"], "type":"infrared", "location": "Lounge", "functions": ["On", "Off", "Source", "Mute", "Volume UP", "Volume Down", "Up", "Left", "Right", "Down", "Enter", "Home", "Back"], "aliases":["theblurayplayer","theblu-rayplayer","blu-rayplayer","theblu-ray","blu-ray","blurayplayer"]},
-    {"name": "Colour Light", "ids": ["infracolorlight"], "type":"infrared", "location": "Bedroom", "functions": ["On", "Off"], "aliases":["thecolorlight","colorlight","color"]},
+    {"name": "Soundbar", "ids": ["soundbar"], "type":"infrared", "location": "Bedroom", "functions": ["On", "Off", "Bluetooth", "Line", "Aux"], "aliases":["soundbar","thesoundbar"]},
+    {"name": "Air Con", "ids": ["aircon"], "type":"infrared", "location": "Bedroom", "functions": ["On", "Off", "Up", "Sleep", "Evaporate", "Rotate", "Ion"], "aliases":["aircon","theaircon","theicon","icon","theacon","acon","iPhone"]},
+    {"name": "Lounge TV", "ids": ["loungeTV"], "type":"infrared", "location": "Lounge", "functions": ["On", "Off", "Source", "Mute", "Volume UP", "Volume Down", "Up", "Left", "Right", "Down", "Enter", "Home", "Back", "Play", "Pause", "Forward", "Reverse", "Stop"], "aliases":["theloungetv","loungetv"]},
+    {"name": "Sitting Room TV", "ids": ["sittingRoomTV"], "type":"infrared", "location": "Sitting Room", "functions": ["On", "Off",  "Source", "Mute", "Volume UP", "Volume Down", "Up", "Left", "Right", "Down", "Enter", "Back"], "aliases":["sittingroomtv","thesittingroomtv"]},
+    {"name": "Blu-Ray Player", "ids": ["bluray"], "type":"infrared", "location": "Lounge", "functions": ["On", "Off", "Source", "Mute", "Volume UP", "Volume Down", "Up", "Left", "Right", "Down", "Enter", "Home", "Back"], "aliases":["theblurayplayer","theblu-rayplayer","blu-rayplayer","theblu-ray","blu-ray","blurayplayer"]},
+    {"name": "Colour Light", "ids": ["colorlight"], "type":"infrared", "location": "Bedroom", "functions": ["On", "Off", "Flash", "Flash Off", "Rotate", "Volume Up", "Volume Down", ""], "aliases":["thecolorlight","colorlight","color"]},
     {"name": "Fridge", "ids": ["e_"], "type":"generic", "location": "Lounge", "functions": ["On", "Off"], "aliases":["fridge","thefridge"]}
 ]
