added esp, computers to site

--- a/newdevices.conf
+++ b/newdevices.conf
@@ -4,8 +4,10 @@
     {"name": "Controllers", "ids": ["energenied_"], "type":"energenie", "location": "Lounge", "functions": ["On", "Off"], "aliases": ["thecontroller","thecontrollers","thecontrol","thecontrols"]},
     {"name": "Consoles", "ids": ["energeniec_"], "type":"energenie", "location": "Lounge", "functions": ["On", "Off"], "aliases":["theconsoles","theconsole"]},
     {"name": "Ceiling Lights", "ids": ["energeniea_"], "type":"energenie", "location": "Lounge", "functions": ["On", "Off"], "aliases":["theceiling"]},
+    {"name": "Ceiling Moods", "ids": ["192.168.0.176"], "type":"ESP", "location": "Lounge", "functions": ["flame", "chase", "demo", "sine", "test", "storm", "snow", "fire", "warmwhite", "cinema", "ocean", "lava"], "aliases":["ceilingcolor"]},
     {"name": "Turntable Light", "ids": ["energeniee_"], "type":"energenie", "location": "Lounge", "functions": ["On", "Off"], "aliases":["theturntablelight","turntablelight","themusiclight","musiclight"]},
-    {"name": "Bed Lights", "ids": ["x10a_"], "type":"x10", "location": "Bedroom", "functions": ["On", "Off"], "aliases":["bedroomlights","thebedroomlights","bedroomlight","thebedroomlight","bedlight","thebedlight","bedlights","thebedlights"]},
+    {"name": "Bedroom Lights", "ids": ["x10a_"], "type":"x10", "location": "Bedroom", "functions": ["On", "Off"], "aliases":["bedroomlights","thebedroomlights","bedroomlight","thebedroomlight"]},
+    {"name": "Bed Lights", "ids": ["x10b_"], "type":"x10", "location": "Bedroom", "functions": ["On", "Off"], "aliases":["bedlight","thebedlight","bedlights","thebedlights"]},
     {"name": "Kitchen Lights", "ids": ["a_"], "type":"generic", "location": "Kitchen", "functions": ["On", "Off"], "aliases":["thekitchenlights","thekitchenlight","kitchenlights","theledstrip"]},
     {"name": "Sitting Room Lamps", "ids": ["b_"], "type":"generic", "location": "Sitting Room", "functions": ["On", "Off"], "aliases":["sittingroomlamp","thesittingroomlamp","sittingroomlamps","thesittingroomlamps"]},
     {"name": "Cat Toy", "ids": ["c_"], "type":"generic", "location": "Hall", "functions": ["On", "Off"], "aliases":["thecattoy","cattoy","thecouchtoy","couchtoy","thetoy","toy"]},
@@ -16,5 +18,11 @@
     {"name": "Sitting Room TV", "ids": ["sittingRoomTV"], "type":"infrared", "location": "Sitting Room", "functions": ["On", "Off",  "Source", "Mute", "Volume UP", "Volume Down", "Up", "Left", "Right", "Down", "Enter", "Back"], "aliases":["sittingroomtv","thesittingroomtv"]},
     {"name": "Blu-Ray Player", "ids": ["bluray"], "type":"infrared", "location": "Lounge", "functions": ["On", "Off", "Source", "Mute", "Volume UP", "Volume Down", "Up", "Left", "Right", "Down", "Enter", "Home", "Back"], "aliases":["theblurayplayer","theblu-rayplayer","blu-rayplayer","theblu-ray","blu-ray","blurayplayer"]},
     {"name": "Colour Light", "ids": ["colorlight"], "type":"infrared", "location": "Bedroom", "functions": ["On", "Off", "Flash", "Flash Off", "Rotate", "Volume Up", "Volume Down", ""], "aliases":["thecolorlight","colorlight","color"]},
-    {"name": "Fridge", "ids": ["e_"], "type":"generic", "location": "Lounge", "functions": ["On", "Off"], "aliases":["fridge","thefridge"]}
+    {"name": "Fridge", "ids": ["e_"], "type":"generic", "location": "Lounge", "functions": ["On", "Off"], "aliases":["fridge","thefridge"]},
+    {"name": "Bedroom Assistant", "ids": ["bedroomassistant"], "type":"rPI", "location": "Bedroom", "functions": ["Restart", "Off"], "aliases":["bedroompi","thebedroompi", "bedroomassistant","thebedroomassistant"]},
+    {"name": "Kitchen Assistant", "ids": ["kitchenassistant"], "type":"rPI", "location": "Kitchen", "functions": ["Restart", "Off"], "aliases":["kitchenpi","thekitchenpi", "kitchenassistant","thekitchenassistant"]},
+    {"name": "Lounge Assistant", "ids": ["loungeassistant"], "type":"rPI", "location": "Lounge", "functions": ["Restart", "Off"], "aliases":["loungepi","theloungepi", "loungeassistant","theloungeassistant"]},
+    {"name": "Sitting Room Assistant", "ids": ["sittingroomassistant"], "type":"rPI", "location": "Sitting Room", "functions": ["Restart", "Off"], "aliases":["sittingroompi","thesittingroompi", "sittingroomassistant","thesittingroomassistant"]},
+    {"name": "PC", "ids": ["pc"], "type":"Windows", "location": "Bedroom", "functions": ["On"], "aliases":["pc","thepc"]}
+
 ]
