--- a/loungesettings.conf
+++ b/loungesettings.conf
@@ -1,7 +1,7 @@
 {
     'devices': {
         'allthelights': ['energeniea_', 'energenieb_', 'energeniee_'],
-        'thelights': ['energeniea_'],
+        'thelights': ['energenief_'],
 	'thetv': 'infraloungeTV'
     },
     'greeting': '/home/pi/r2d2.ogg'
