added cat laser

--- a/newdevices.conf
+++ b/newdevices.conf
@@ -23,6 +23,6 @@
     {"name": "Kitchen Assistant", "ids": ["kitchenassistant"], "type":"rPI", "location": "Kitchen", "functions": ["Restart", "Off"], "aliases":["kitchenpi","thekitchenpi", "kitchenassistant","thekitchenassistant"]},
     {"name": "Lounge Assistant", "ids": ["loungeassistant"], "type":"rPI", "location": "Lounge", "functions": ["Restart", "Off"], "aliases":["loungepi","theloungepi", "loungeassistant","theloungeassistant"]},
     {"name": "Sitting Room Assistant", "ids": ["sittingroomassistant"], "type":"rPI", "location": "Sitting Room", "functions": ["Restart", "Off"], "aliases":["sittingroompi","thesittingroompi", "sittingroomassistant","thesittingroomassistant"]},
-    {"name": "PC", "ids": ["pc"], "type":"Windows", "location": "Bedroom", "functions": ["On"], "aliases":["pc","thepc"]}
-
+    {"name": "PC", "ids": ["pc"], "type":"Windows", "location": "Bedroom", "functions": ["On"], "aliases":["pc","thepc"]},
+    {"name": "Cat Laser", "ids": ["192.168.0.207"], "type":"CatLaser", "location": "Mobile", "functions": [], "aliases":["CatLaser","theCatLaser"]}
 ]
