--- a/config.json
+++ b/config.json
@@ -688,21 +688,26 @@
     },
     "plugs": {
         "generic": {
-            "a_on": "1000010111101111001100001",
-            "a_off": "1000010111101111001100011",
-            "b_on": "1000010111101111001100101",
-            "b_off": "1000010111101111001100111",
-            "c_on": "1000010111101111001101001",
-            "c_off": "1000010111101111001101011",
-            "d_on": "1000010111101111001110001",
-            "d_off": "1000010111101111001110011",
-            "e_on": "1000010111101101001110001",
-            "e_off": "1000010111101101001110011",
-            "all_on": "1000010111101111001111011",
-            "all_off": "1000010111101111001111101",
-            "short_delay": "0.00032",
-            "long_delay": "0.00090",
-            "extended_delay": "0.0096"
+            "a_on": "3444434333343333443344443",
+            "a_off": "3444434333343333443344433",
+            "b_on": "3444434333343333443344343",
+            "b_off": "3444434333343333443344333",
+            "c_on": "3444434333343333443343443",
+            "c_off": "3444434333343333443343433",
+            "d_on": "3444434333343333443334443",
+            "d_off": "3444434333343333443334433",
+            "e_on": "3444434333343343443334443",
+            "e_off": "3444434333343343443334433",
+            "all_on": "3444434333343333443333433",
+            "all_off": "3444434333343333443333343",
+            "shortOnDelay": "0.00032",
+            "shortOffDelay": "0.00032",
+            "longOnDelay": "0.00090",
+            "longOffDelay": "0.00090",
+            "bigOn": "0",
+            "bigOff": "0",
+            "extendedDelay": "0.0096",
+            "endDelay": "0.0087"
         },
         "energenie": {
             "energeniea_on": "1111111111111111111000001",
@@ -721,38 +726,49 @@
             "energenieg_off": "1101111111111111111011011",
             "energenieall_on": "1111111111111111111000101",
             "energenieall_off": "1111111111111111111000111",
-            "energenieshorton_delay": "0.00024",
-            "energenieshortoff_delay": "0.00055",
-            "energenielongon_delay": "0.00072",
-            "energenielongoff_delay": "0.00012",
-            "energenieextended_delay": "0.00642"
+            "shortOnDelay": "0.00024",
+            "shortOffDelay": "0.00055",
+            "longOnDelay": "0.00072",
+            "longOffDelay": "0.00012",
+            "bigOn": "0",
+            "bigOff": "0",
+            "extendedDelay": "0.00642",
+            "endDelay": "0.00587"
         },
         "x10": {
-            "x10a_on": "1233222223223333322222222333333333",
-            "x10a_off": "1233222223223333322322222332333333",
-            "x10b_on": "1233222223223333322232222333233333",
-            "x10b_off": "1233222223223333322332222332233333",
-            "x10c_on": "1233222223223333322223222333323333",
-            "x10c_off": "1233222223223333322323222332323333",
-            "x10d_on": "1233222223223333322233222333223333",
-            "x10d_off": "1233222223223333322333222332223333",
-            "x10dim": "1233222223223333332233222233223333",
-            "x10bright": "1233222223223333332223222233323333",
-            "x10short_delay": "0.00055",
-            "x10long_delay": "0.00170",
-            "x10bigon": "0.00950",
-            "x10bigoff": "0.00500",
-            "x10extended_delay": "0.02915"
+            "x10a_on": "2133111113113333311111111333333333",
+            "x10a_off": "2133111113113333311311111331333333",
+            "x10b_on": "2133111113113333311131111333133333",
+            "x10b_off": "2133111113113333311331111331133333",
+            "x10c_on": "2133111113113333311113111333313333",
+            "x10c_off": "2133111113113333311313111331313333",
+            "x10d_on": "2133111113113333311133111333113333",
+            "x10d_off": "2133111113113333311333111331113333",
+            "x10dim": "2133111113113333331133111133113333",
+            "x10bright": "2133111113113333331113111133313333",
+            "shortOnDelay": "0.00055",
+            "shortOffDelay": "0.00055",
+            "longOnDelay": "0.00170",
+            "longOffDelay": "0.00170",
+            "bigOn": "0.00950",
+            "bigOff": "0.00500",
+            "extendedDelay": "0.01915",
+            "endDelay": "0.01745"
         },
         "twelvevolt": {
-            "waterfall_on": "1010101010001011001111111",
-            "waterfall_off": "1010101010001011110011111",
-            "waterfall_sdelay": "0.00035",
-            "waterfall_ldelay": "0.00115",
-            "waterfall_edelay": "0.01171"
+            "waterfall_on": "3434343434443433443333333",
+            "waterfall_off": "3434343434443433334433333",
+            "shortOnDelay": "0.00035",
+            "shortOffDelay": "0.00035",
+            "longOnDelay": "0.00115",
+            "longOffDelay": "0.00115",
+            "bigOn": "0",
+            "bigOff": "0",
+            "extendedDelay": "0.01171",
+            "endDelay": "0.01056"
         },
         "global": {
-            "TRANSMIT_PIN": "24"
+            "transmitPin": 24
         }
     }
 }
