restart assistant service, need to move pi controls from server to script

--- a/config.json
+++ b/config.json
@@ -500,6 +500,7 @@
             "functions": [
                 "Restart",
                 "Off",
+		"Restart Assistant",
                 "Update Music",
                 "Create Playlists",
                 "Custom Playlists Converter"
