--- a/assistant.service
+++ b/assistant.service
@@ -6,6 +6,7 @@ After=network.target
 Type=simple 
 User=root
 Environment=VIRTUAL_ENV="/home/pi/env/bin/activate" 
+Environment=PYTHONIOENCODING="UTF-8"
 StandardOutput=inherit
 StandardError=inherit
 SyslogIdentifier=assistant
