--- a/config.json
+++ b/config.json
@@ -52,14 +52,10 @@
                 "Off"
             ],
             "aliases": [
-                "thelamps",
-                "thelamp",
-                "thealarms",
-                "thealarm",
-                "alarm",
-                "alarm",
-                "myalarm",
-                "myalarms"
+                "loungelamps",
+                "theloungelamps",
+                "theloungealarms",
+                "loungealarms"
             ]
         },
         {
@@ -534,7 +530,8 @@
 		"Restart Assistant",
                 "Update Music",
                 "Create Playlists",
-                "Custom Playlists Converter"
+                "Custom Playlists Converter",
+                "Music Manager"
             ],
             "aliases": [
                 "bedroompi",
@@ -557,7 +554,8 @@
 		        "Restart Assistant",
                 "Update Music",
                 "Create Playlists",
-                "Custom Playlists Converter"
+                "Custom Playlists Converter",
+                "Music Manager"
             ],
             "aliases": [
                 "diningpi",
@@ -578,7 +576,8 @@
                 "Restart",
                 "Off",
                 "Update Music",
-                "Create Playlists"
+                "Create Playlists",
+                "Music Manager"
             ],
             "aliases": [
                 "kitchenpi",
@@ -599,13 +598,15 @@
                 "Restart",
                 "Off",
                 "Update Music",
-                "Create Playlists"
+                "Create Playlists",
+                "Music Manager"
             ],
             "aliases": [
                 "loungepi",
                 "theloungepi",
                 "loungeassistant",
-                "theloungeassistant"
+                "theloungeassistant",
+                "Music Manager"
             ],
             "user": "pi"
         },
@@ -620,7 +621,8 @@
                 "Restart",
                 "Off",
                 "Update Music",
-                "Create Playlists"
+                "Create Playlists",
+                "Music Manager"
             ],
             "aliases": [
                 "sittingroompi",
@@ -924,7 +926,7 @@
                 "tv": ["Bedroom TV"],
                 "thetv": ["Bedroom TV"]
             },
-            "greeting": "/home/pi/Assistant/hail.ogg"
+            "greeting": "/home/pi/Assistant/media/hail.ogg"
         },
         "loungeAssistant": {
             "device_id": "ass-pi-lounge-pi-sakvam",
@@ -936,9 +938,18 @@
                 ],
                 "thelights": ["Lounge Lights"],
                 "thetv": ["Lounge TV"],
-                "tv": ["Lounge TV"]
+                "tv": ["Lounge TV"],
+                "thelamps": ["Lounge Lamps"],
+                "alarms": ["Lounge Lamps"],
+                "alarm": ["Lounge Lamps"],
+                "thealarm": ["Lounge Lamps"],
+                "myalarms": ["Lounge Lamps"],
+                "myalarm": ["Lounge Lamps"],
+                "lamps": ["Lounge Lamps"],
+                "thelamp": ["Lounge Lamps"],
+                "lamp": ["Lounge Lamps"]
             },
-            "greeting": "/home/pi/Assistant/r2d2.ogg"
+            "greeting": "/home/pi/Assistant/media/r2d2.ogg"
         },
         "kitchenAssistant": {
             "device_id": "ass-pi-kitchen-kitchen-pi-mfqvga",
@@ -950,7 +961,7 @@
                     "Kitchen Lights"
                 ]
             },
-            "greeting": "/home/pi/Assistant/holly.ogg"
+            "greeting": "/home/pi/Assistant/media/holly.ogg"
         },
         "sittingRoomAssistant": {
             "device_id": "ass-pi-downstairs-sitting-room-pi-iookcz",
@@ -964,7 +975,7 @@
                 "tv": "Sitting Room TV",
                 "thetv": "Sitting Room TV"
             },
-            "greeting": "/home/pi/Assistant/mother.ogg"
+            "greeting": "/home/pi/Assistant/media/mother.ogg"
         },
         "diningAssistant": {
             "device_id": "ass-pi-downstairs-dining-room-pi-iookcz",
@@ -982,7 +993,7 @@
                     "Dining Room Lamps"
                 ]
             },
-            "greeting": "/home/pi/Assistant/handlink.ogg"
+            "greeting": "/home/pi/Assistant/media/handlink.ogg"
         }
     }
 }
