updated assistant to use mplayerServer with rpc

--- a/site/package.json
+++ b/site/package.json
@@ -9,6 +9,7 @@
     "express": "~4.7.2",
     "log4js": "^2.7.0",
     "method-override": "~2.1.2",
-    "morgan": "~1.2.2"
+    "morgan": "~1.2.2",
+    "zerorpc": "^0.9.8"
   }
 }
